feat: add Myoffice_ACPD

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\MSSQLSERVER02;Database=test1;User Id=sa;Password=a1234;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
